--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,18 +5,17 @@ edition = "2021"
 publish = false
 
 [dependencies]
-shuttle-runtime = "0.16.0"
-actix-web = "4.3.1"
+actix-web = "4.3"
 actix-files = "0.6"
 actix-multipart = "0.6"
-shuttle-actix-web = "0.16.0"
-tokio = "1.28.1"
+tokio = "1.28"
 chrono = "0.4"
 chrono-tz = "0.8"
 log = "0.4"
+env_logger = "0.10"
 image = "0.24"
 mime = "0.3"
-uuid = "1.3"
+uuid = { version = "1.3", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_qs = "0.10"
 serde_json = "1.0"
