--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ publish = false
 [workspace]
 members = ["server", "front", "uma-details-utility"]
 default-members = ["server"]
+
+[profile.release]
+lto = true
+panic = 'abort'
+codegen-units = 1
