--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -32,7 +32,39 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get -y install libopencv-dev libclang-dev gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+        sudo apt-get -y install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+
+    - name: Cache OpenCV build
+      id: opencv_build_cache
+      uses: actions/cache@v2
+      with:
+        path: ./.build-opencv
+        key: opencv-build
+
+    - name: Build OpenCV
+      if: steps.opencv_build_cache.outputs.cache-hit != 'true'
+      run: |
+        mkdir -p ./.build-opencv && cd ./.build-opencv
+        
+        wget -O opencv.zip https://github.com/opencv/opencv/archive/4.x.zip
+        wget -O opencv_contrib.zip https://github.com/opencv/opencv_contrib/archive/4.x.zip
+        
+        unzip opencv.zip && rm opencv.zip
+        unzip opencv_contrib.zip && rm opencv_contrib.zip
+        
+        mkdir -p build && cd build
+        
+        echo 'find_program(CMAKE_C_COMPILER NAMES aarch64-linux-gnu-gcc)' >> ../opencv-4.x/platforms/linux/aarch64-gnu.toolchain.cmake
+        echo 'find_program(CMAKE_CXX_COMPILER NAMES aarch64-linux-gnu-g++)' >> ../opencv-4.x/platforms/linux/aarch64-gnu.toolchain.cmake
+        
+        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=NO \
+        -DCMAKE_TOOLCHAIN_FILE=../opencv-4.x/platforms/linux/aarch64-gnu.toolchain.cmake
+        -DCMAKE_INSTALL_PREFIX=/opt/opencv -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF \
+        -DBUILD_TESTS=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_opencv_java=OFF \
+        -DBUILD_opencv_python=OFF -DOPENCV_EXTRA_MODULES_PATH=../opencv_contrib-4.x/modules \
+        ../opencv-4.x
+        
+        make -j8 && make install
     
     - name: Cache cargo registry
       uses: actions/cache@v2
@@ -53,11 +85,14 @@ jobs:
         key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
         
     - name: Build server
-      uses: actions-rs/cargo@v1.0.1
+      uses: dtolnay/rust-toolchain@stable
+      run: |
+        OPENCV_LINK_LIBS="opencv_imgproc,opencv_face,opencv_objdetect,opencv_dnn,opencv_dnn_objdetect,opencv_core,ippiw,ittnotify,ippicv,liblibprotobuf,z"
+        OPENCV_LINK_PATHS=/opt/opencv/lib,/opt/opencv/lib/opencv4/3rdparty,/usr/lib/x86_64-linux-gnu
+        OPENCV_INCLUDE_PATHS=/opt/opencv/include/opencv4
+        cargo build --release --target aarch64-unknown-linux-musl
       with:
-        use-cross: true
-        command: build
-        args: --release --target aarch64-unknown-linux-gnu
+        targets: aarch64-unknown-linux-musl
     
     - name: Build front
       run: |
