--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -33,40 +33,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get -y install crossbuild-essential-arm64
-        sudo apt-get -y install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu clang
+        sudo apt-get -y install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu clang llvm
 
-    - name: Cache OpenCV build
-      id: opencv_build_cache
-      uses: actions/cache@v2
-      with:
-        path: ./.build-opencv
-        key: opencv-build
-
-    - name: Build OpenCV
-      if: steps.opencv_build_cache.outputs.cache-hit != 'true'
-      run: |
-        mkdir -p ./.build-opencv && cd ./.build-opencv
-        
-        wget -O opencv.zip https://github.com/opencv/opencv/archive/4.x.zip
-        wget -O opencv_contrib.zip https://github.com/opencv/opencv_contrib/archive/4.x.zip
-        
-        unzip opencv.zip && rm opencv.zip
-        unzip opencv_contrib.zip && rm opencv_contrib.zip
-        
-        mkdir -p build && cd build
-        
-        echo 'find_program(CMAKE_C_COMPILER NAMES aarch64-linux-gnu-gcc)' >> ../opencv-4.x/platforms/linux/aarch64-gnu.toolchain.cmake
-        echo 'find_program(CMAKE_CXX_COMPILER NAMES aarch64-linux-gnu-g++)' >> ../opencv-4.x/platforms/linux/aarch64-gnu.toolchain.cmake
-        
-        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=NO \
-        -DCMAKE_TOOLCHAIN_FILE=../opencv-4.x/platforms/linux/aarch64-gnu.toolchain.cmake \
-        -DCMAKE_INSTALL_PREFIX=/opt/opencv -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF \
-        -DBUILD_TESTS=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_opencv_java=OFF \
-        -DBUILD_opencv_python=OFF -DOPENCV_EXTRA_MODULES_PATH=../opencv_contrib-4.x/modules \
-        ../opencv-4.x
-        
-        make -j8 && make install
-    
     - name: Cache cargo registry
       uses: actions/cache@v2
       with:
