--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -35,6 +35,20 @@ jobs:
         sudo apt-get -y install crossbuild-essential-arm64
         sudo apt-get -y install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu clang llvm
 
+    - name: Cache clang
+      id: clang_install_cache
+      uses: actions/cache@v2
+      with:
+        path: ./clang
+        key: clang-installation
+
+    - name: Install clang
+      if: steps.clang_install_cache.outputs.cache-hit != 'true'
+      run: |
+        mkdir -p ./clang && cd ./clang
+        wget -O llvm.tar.xz https://github.com/llvm/llvm-project/releases/download/llvmorg-16.0.0/clang+llvm-16.0.0-aarch64-linux-gnu.tar.xz
+        xz -dc llvm.tar.xz | tar xfv -
+
     - name: Cache cargo registry
       uses: actions/cache@v2
       with:
@@ -63,6 +77,7 @@ jobs:
         OPENCV_LINK_LIBS="opencv_imgproc,opencv_face,opencv_objdetect,opencv_dnn,opencv_dnn_objdetect,opencv_core,ippiw,ittnotify,ippicv,liblibprotobuf,z"
         OPENCV_LINK_PATHS=/opt/opencv/lib,/opt/opencv/lib/opencv4/3rdparty,/usr/lib/x86_64-linux-gnu
         OPENCV_INCLUDE_PATHS=/opt/opencv/include/opencv4
+        LIBCLANG_PATH=./clang/llvm/lib
         cargo build --release --target aarch64-unknown-linux-musl
 
     - name: Build front
