--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -77,7 +77,7 @@ jobs:
         OPENCV_LINK_LIBS="opencv_imgproc,opencv_face,opencv_objdetect,opencv_dnn,opencv_dnn_objdetect,opencv_core,ippiw,ittnotify,ippicv,liblibprotobuf,z"
         OPENCV_LINK_PATHS=/opt/opencv/lib,/opt/opencv/lib/opencv4/3rdparty,/usr/lib/x86_64-linux-gnu
         OPENCV_INCLUDE_PATHS=/opt/opencv/include/opencv4
-        LIBCLANG_PATH=./clang/llvm/lib
+        LIBCLANG_PATH=./clang/clang+llvm-16.0.0-aarch64-linux-gnu/lib
         cargo build --release --target aarch64-unknown-linux-musl
 
     - name: Build front
