gha: 環境変数の中身を出力するように

--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -74,11 +74,15 @@ jobs:
 
     - name: Build server
       env:
-        OPENCV_LINK_LIBS: opencv_imgproc,opencv_face,opencv_objdetect,opencv_dnn,opencv_dnn_objdetect,opencv_core,ippiw,ittnotify,ippicv,liblibprotobuf,z
-        OPENCV_LINK_PATHS: /opt/opencv/lib,/opt/opencv/lib/opencv4/3rdparty,/usr/lib/x86_64-linux-gnu
-        OPENCV_INCLUDE_PATHS: /opt/opencv/include/opencv4
-        LIBCLANG_PATH: ./clang/clang+llvm-16.0.0-aarch64-linux-gnu/lib
+        OPENCV_LINK_LIBS: "opencv_imgproc,opencv_face,opencv_objdetect,opencv_dnn,opencv_dnn_objdetect,opencv_core,ippiw,ittnotify,ippicv,liblibprotobuf,z"
+        OPENCV_LINK_PATHS: "/opt/opencv/lib,/opt/opencv/lib/opencv4/3rdparty,/usr/lib/x86_64-linux-gnu"
+        OPENCV_INCLUDE_PATHS: "/opt/opencv/include/opencv4"
+        LIBCLANG_PATH: "./clang/clang+llvm-16.0.0-aarch64-linux-gnu/lib"
       run: |
+        echo "OPENCV_LINK_LIBS: $OPENCV_LINK_LIBS"
+        echo "OPENCV_LINK_PATHS: $OPENCV_LINK_PATHS"
+        echo "OPENCV_INCLUDE_PATHS: $OPENCV_INCLUDE_PATHS"
+        echo "LIBCLANG_PATH: $LIBCLANG_PATH"
         cargo build --release --target aarch64-unknown-linux-musl
 
     - name: Build front
