--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -49,6 +49,10 @@ jobs:
         wget -O llvm.tar.xz https://github.com/llvm/llvm-project/releases/download/llvmorg-16.0.0/clang+llvm-16.0.0-aarch64-linux-gnu.tar.xz
         xz -dc llvm.tar.xz | tar xfv -
 
+    - name: Copy clang
+      run: |
+        mv ./clang/clang+llvm-16.0.0-aarch64-linux-gnu /usr/local/llvm
+
     - name: Cache cargo registry
       uses: actions/cache@v2
       with:
@@ -77,12 +81,10 @@ jobs:
         OPENCV_LINK_LIBS: "opencv_imgproc,opencv_face,opencv_objdetect,opencv_dnn,opencv_dnn_objdetect,opencv_core,ippiw,ittnotify,ippicv,liblibprotobuf,z"
         OPENCV_LINK_PATHS: "/opt/opencv/lib,/opt/opencv/lib/opencv4/3rdparty,/usr/lib/x86_64-linux-gnu"
         OPENCV_INCLUDE_PATHS: "/opt/opencv/include/opencv4"
-        LIBCLANG_PATH: "./clang/clang+llvm-16.0.0-aarch64-linux-gnu/lib"
       run: |
         echo "OPENCV_LINK_LIBS: $OPENCV_LINK_LIBS"
         echo "OPENCV_LINK_PATHS: $OPENCV_LINK_PATHS"
         echo "OPENCV_INCLUDE_PATHS: $OPENCV_INCLUDE_PATHS"
-        echo "LIBCLANG_PATH: $LIBCLANG_PATH"
         cargo build --release --target aarch64-unknown-linux-musl
 
     - name: Build front
