--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,3 +7,7 @@ incremental = true
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
 ar = "aarch64-linux-gnu-gcc-ar"
+
+[target.aarch64-unknown-linux-musl]
+linker = "aarch64-linux-gnu-gcc"
+ar = "aarch64-linux-gnu-gcc-ar"
