--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,9 +5,9 @@ git-fetch-with-cli = true
 incremental = true
 
 [target.aarch64-unknown-linux-gnu]
-linker = "aarch64-linux-gnu-gcc"
-ar = "aarch64-linux-gnu-gcc-ar"
+linker = "/usr/bin/aarch64-linux-gnu-gcc"
+ar = "/usr/bin/aarch64-linux-gnu-gcc-ar"
 
 [target.aarch64-unknown-linux-musl]
-linker = "aarch64-linux-gnu-gcc"
-ar = "aarch64-linux-gnu-gcc-ar"
+linker = "/usr/bin/aarch64-linux-gnu-gcc"
+ar = "/usr/bin/aarch64-linux-gnu-gcc-ar"
