--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get -y install crossbuild-essential-arm64
-        sudo apt-get -y install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu clang llvm
+        sudo apt-get -y install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
 
     - name: Cache clang
       id: clang_install_cache
