--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -76,6 +76,13 @@ jobs:
       with:
         targets: aarch64-unknown-linux-gnu
 
+    - name: Overwrite cc and ar
+      run: |
+        sudo rm /usr/bin/cc
+        sudo rm /usr/bin/ar
+        sudo ln -s /usr/bin/cc /usr/bin/aarch64-linux-gnu-gcc
+        sudo ln -s /usr/bin/ar /usr/bin/aarch64-linux-gnu-gcc-ar
+
     - name: Build server
       env:
         OPENCV_LINK_LIBS: "opencv_imgproc,opencv_face,opencv_objdetect,opencv_dnn,opencv_dnn_objdetect,opencv_core,ippiw,ittnotify,ippicv,liblibprotobuf,z"
@@ -85,7 +92,6 @@ jobs:
         echo "OPENCV_LINK_LIBS: $OPENCV_LINK_LIBS"
         echo "OPENCV_LINK_PATHS: $OPENCV_LINK_PATHS"
         echo "OPENCV_INCLUDE_PATHS: $OPENCV_INCLUDE_PATHS"
-        mv ./.cargo/config.toml ~/.cargo/config.toml
         cargo build --release --target aarch64-unknown-linux-gnu
 
     - name: Build front
