--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -72,9 +72,9 @@ jobs:
         key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
         
     - name: Install Rust toolchain
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@master
       with:
-        targets: aarch64-unknown-linux-gnu
+        toolchain: stable-aarch64-linux-gnu-gcc
 
     - name: Overwrite cc and ar
       run: |
