--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,11 @@ jobs:
           name: "Restore cargo index cache"
           keys:
             - cargo-index-{{ checksum "Cargo.lock" }}
+      
+      - run:
+          name: "Install trunk"
+          command: |
+            cargo install --locked trunk
 
       - run:
           name: "Build server"
@@ -123,8 +128,7 @@ jobs:
       - run:
           name: "Build front"
           command: |
-            wget -qO- https://github.com/thedodd/trunk/releases/download/v0.16.0/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
-            ./trunk build --release --target ./front/index.html --dist ./dist
+            trunk build --release --target ./front/index.html --dist ./dist
       
       - save_cache:
           name: "Cache cargo registry"
