--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 yew = { version = "0.20", features = ["csr"] }
+yew_styles = { version = "0.11" }
+stylist = { version = "0.12", features = ["yew_integration"] }
+web-sys = "0.3"
+js-sys = "0.3"
+gloo = "0.8"
+base64 = "0.21"
 yew-router = "0.17"
-yew_styles = { version = "0.11", features=["full"] }
