--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -9,6 +9,7 @@ yew = { version = "0.20", features = ["csr"] }
 yew-router = "0.17"
 yew_styles = { version = "0.11" }
 stylist = { version = "0.12", features = ["yew_integration"] }
+wasm-bindgen = "0.2"
 web-sys = "0.3"
 js-sys = "0.3"
 gloo = "0.8"
